--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "linz-american-bank-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "An online bank with admin features",
   "main": "index.js",
   "scripts": {
@@ -17,6 +18,7 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "resend": "^6.4.2"
   }
 }
